* Save last viewed page in sharedPref * custom alert dialog view * Initial commit of Product Details page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="fluorescent_blue">#ff1ae5e5</color>
+    <color name="fluorescent_blue_half">#7f1ae5e5</color>
     <color name="pacific_blue">#ff00bcd4</color>
 </resources>
