--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,10 +7,12 @@
     tools:context=".ui.HomeActivity">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/products_list_fragment"
-        android:name="com.joshuakarl.serinotest.ui.fragment.ProductsListFragment"
+        android:id="@+id/nav_host"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/navigation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
