--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="fluorescent_blue">#ff1ae5e5</color>
     <color name="fluorescent_blue_half">#7f1ae5e5</color>
     <color name="pacific_blue">#ff00bcd4</color>
+    <color name="darker_gray_half">#ffcccccc</color>
 </resources>
