--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="product_preview_size">84dp</dimen>
+    <dimen name="product_detail_horizontal_margin">16dp</dimen>
 </resources>
