--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -94,13 +94,14 @@
                     android:visibility="visible"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="₱549.00" />
+                    tools:text="₱49.00" />
 
                 <TextView
                     android:id="@+id/product_detail_stock"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/worksans_italic"
+                    android:letterSpacing="-0.04"
                     android:visibility="visible"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/product_detail_price"
@@ -126,11 +127,57 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/worksans"
+                    android:textColor="@color/black"
                     android:textSize="16sp"
                     android:visibility="visible"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/product_detail_category"
                     tools:text="An apple mobile which is nothing like apple" />
+
+                <TextView
+                    android:id="@+id/dummy_review_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/worksans"
+                    android:text="Reviews (1)"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/product_detail_description" />
+
+                <TextView
+                    android:id="@+id/dummy_review_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/worksans"
+                    android:text="Neque porro - 4.00"
+                    android:textColor="@color/pacific_blue"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/dummy_review_label" />
+
+                <TextView
+                    android:id="@+id/dummy_review_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:fontFamily="@font/worksans"
+                    android:text="Quisque tincidunt neque ex, in molestie ligula porta id. Aenean in felis volutpat, maximus dolor quis, imperdiet purus. Integer arcu elit, interdum id ultrices vitae, condimentum eu elit. Morbi ultricies pretium nisi, at venenatis ex tempus at. Maecenas vel maximus nisl. Cras tristique nulla sed lectus suscipit suscipit. Vestibulum laoreet purus quis sem vehicula placerat. In condimentum, sem vulputate tincidunt sagittis, felis ante bibendum nisi, non finibus augue enim id libero."
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/dummy_review_name" />
+
+                <ImageView
+                    android:id="@+id/dummy_review_star_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="2dp"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="@+id/dummy_review_name"
+                    app:layout_constraintStart_toEndOf="@+id/dummy_review_name"
+                    app:layout_constraintTop_toTopOf="@+id/dummy_review_name"
+                    app:srcCompat="@drawable/ic_baseline_star_24"
+                    app:tint="@color/pacific_blue" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
 
