Updateo gradle version
in prep for practicing converting to jetpack compose

--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -9,14 +9,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/product_detail_images_fragment"
+            android:layout_width="0dp"
+            android:layout_height="300dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/product_detail_images_vp"
             android:layout_width="match_parent"
             android:layout_height="300dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" >
-        </androidx.viewpager2.widget.ViewPager2>
+            app:layout_constraintTop_toTopOf="parent"></androidx.viewpager2.widget.ViewPager2>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/product_detail_images_vp_indicator"
@@ -24,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:background="#00FFFFFF"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/product_detail_images_vp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +50,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/product_detail_images_vp">
+            app:layout_constraintTop_toBottomOf="@+id/product_detail_images_fragment">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
